# DART_PIM_Repository

Controllers/: Bank_Controller.sv  Chip_Controller.sv  README.md
Full-System Simulator/: README.md  genSW.py  main.cpp  mapper.cpp  mapper.h  minimizer.cpp  minimizer.h  pimMapper.cpp  pimMapper.h  simulator.cpp  simulator.h  sw.cpp  sw.h  utility.cpp  utility.h
RISC-V Simulator/: CMakeLists.txt  README  RW_sim.cpp  WF_sim.cpp  manager.cpp  manager.h  multicore_with_1L2_0L3.py  multicore_with_1L2_0L3_simple.py  readsMappings_090524.txt  readsMappings_090524_reduced.txt  reads_R1_25.fastq  riscv_cpu_mins.txt
RISC-V Simulator/build2/: CMakeCache.txt  DART_PIM  Makefile  cmake_install.cmake  read_file.txt
Single-Crossbar Simulator/: AND2_bitwise.m  Cycle_accurate_simulator.m  FA_1bit.m  FA_Nbits.m  FA_const_1bit.m  FA_const_Nbits.m  FS_1bit.m  FS_Nbits.m  HA_1bit.m  HA_Nbits.m  MAX_Nbits.m  MIN_Nbits.m  MUX_A_Nbits.m  MUX_B_Nbits.m  MUX_a_1bit.m  MUX_b_1bit.m  NOR2.m  NOR2_bitwise.m  NOT.m  NOT_bitwise.m  Non_Neg_1bit.m  Non_Neg_Nbits.m  README.md  Seeding_Evaluation_vs_Buffer_Sizes.m  XNOR2_bitwise.m  XOR2_bitwise.m  compare.m  find_first_match.m  get_read.m  init_read.m  init_ref_seg.m  move_read.m  reduction.m  score_calc.m  score_first_col_row.m  sigma_calc.m  write0.m  write1.m
